Archive2/39/b906b6e59cc6cd/output
main.cpp: In function 'void PrintIt(int (*)[6])':
main.cpp:16:6: error: 'x' was not declared in this scope
 for (x=0; x<6; x++) {
      ^
main.cpp:17:11: error: 'y' was not declared in this scope
      for (y=0; y<6; y++) {
           ^
